More progress towards this cleanup/redesign.

--- a/mcr/adrianc.html
+++ b/mcr/adrianc.html
@@ -1,88 +1,67 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Adrian Monument Cemetery</title>
-</head>
+<div class="mcr-title">Adrian Monument</div>
 
-<body>
-<font SIZE="2">
+<p>Adrian, Oregon.</p>
+<p>Erected by the &quot;Modern Pioneer Club&quot; in 1966. Records compiled by: Grant and Sybil Higley</p>
 
-<p ALIGN="CENTER">Adrian Monument</p>
-
-<p ALIGN="CENTER">Adrian, Oregon</p>
-
-<p ALIGN="CENTER">Erected by the &quot;Modern Pioneer Club&quot;</p>
-
-<p ALIGN="CENTER">1966</p>
-
-<p ALIGN="CENTER">Large Rock</p>
-
-<p ALIGN="CENTER">Records compiled by: Grant and Sybil Higley</p>
-
-<p ALIGN="CENTER"></font>&nbsp;</p>
-
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="607">
-  <tr>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">Last Name</b></font></td>
-    <td WIDTH="16%"><font SIZE="2"><b><p ALIGN="CENTER">First Name</b></font></td>
-    <td WIDTH="20%"><font SIZE="2"><b><p ALIGN="CENTER">Birth Date</b></font></td>
-    <td WIDTH="17%"><font SIZE="2"><b><p ALIGN="CENTER">Death Date</b></font></td>
-    <td WIDTH="27%"><font SIZE="2"><b><p ALIGN="CENTER">Other Information</b></font></td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">ADAMS</font></td>
-    <td WIDTH="16%"><font SIZE="2">Robert</font></td>
-    <td WIDTH="20%"><font SIZE="2">1815</font></td>
-    <td WIDTH="17%"><font SIZE="2">1894</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>ADAMS</td>
+    <td>Robert</td>
+    <td>1815</td>
+    <td>1894</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">BRADLEY</font></td>
-    <td WIDTH="16%"><font SIZE="2">Baby</font></td>
-    <td WIDTH="20%"><font SIZE="2">--</font></td>
-    <td WIDTH="17%"><font SIZE="2">1900</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>BRADLEY</td>
+    <td>Baby</td>
+    <td>--</td>
+    <td>1900</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">DUMERIES</font></td>
-    <td WIDTH="16%"><font SIZE="2">Baby</font></td>
-    <td WIDTH="20%"><font SIZE="2">--</font></td>
-    <td WIDTH="17%"><font SIZE="2">1884</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>DUMERIES</td>
+    <td>Baby</td>
+    <td>--</td>
+    <td>1884</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">MACKEY</font></td>
-    <td WIDTH="16%"><font SIZE="2">Charley</font></td>
-    <td WIDTH="20%"><font SIZE="2">1878</font></td>
-    <td WIDTH="17%"><font SIZE="2">1898</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>MACKEY</td>
+    <td>Charley</td>
+    <td>1878</td>
+    <td>1898</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">MAHAFFEY</font></td>
-    <td WIDTH="16%"><font SIZE="2">Annie</font></td>
-    <td WIDTH="20%"><font SIZE="2">1870</font></td>
-    <td WIDTH="17%"><font SIZE="2">1884</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>MAHAFFEY</td>
+    <td>Annie</td>
+    <td>1870</td>
+    <td>1884</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">MAHAFFEY</font></td>
-    <td WIDTH="16%"><font SIZE="2">John</font></td>
-    <td WIDTH="20%"><font SIZE="2">--</font></td>
-    <td WIDTH="17%"><font SIZE="2">1884</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>MAHAFFEY</td>
+    <td>John</td>
+    <td>--</td>
+    <td>1884</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">MILLARD</font></td>
-    <td WIDTH="16%"><font SIZE="2">Mackey</font></td>
-    <td WIDTH="20%"><font SIZE="2">1893</font></td>
-    <td WIDTH="17%"><font SIZE="2">1893</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>MILLARD</td>
+    <td>Mackey</td>
+    <td>1893</td>
+    <td>1893</td>
+    <td>&nbsp;</td>
   </tr>
 </table>
-
-<p><font SIZE="2">&nbsp;</p>
-
-<p></font>&nbsp;</p>
-</body>
-</html>
