--- a/mcr/newjuntura.html
+++ b/mcr/newjuntura.html
@@ -1,252 +1,244 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Juntura Cemetery</title>
-</head>
+<div class="mcr-title">New Juntura Cemetery</div>
 
-<body>
-<font SIZE="2">
+<p>Juntura, Oregon</p>
 
-<p ALIGN="CENTER">NEW JUNTURA CEMETERY</p>
+<p>1983</p>
 
-<p ALIGN="CENTER">Juntura, Oregon</p>
-
-<p ALIGN="CENTER">1983</p>
-
-<p ALIGN="CENTER">T 21S, R 38E, S 17</p>
-
-<p>&nbsp;</p>
+<p>T 21S, R 38E, S 17</p>
 
 <p>This cemetery is located on Highway 20. The cemetery is enclosed with a fence. It is
 overgrown with grass and greasewood. The grounds are very poorly kept. There is no road
 leading to the cemetery, only a cow path. One grave is located 100 ft. west of the rest of
 the graves. It is a duplicate of a marker found in the cemetery. This was to replace the
 original one which started to crumble. Records compiled by Grant and Sybil Higley.</p>
-</font>
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="583">
-  <tr>
-    <td WIDTH="17%"><font SIZE="2"><b><p ALIGN="CENTER">LAST NAME</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b><p ALIGN="CENTER">FIRST NAME</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b><p ALIGN="CENTER">BIRTH DATE</b></font></td>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">DEATH DATE</b></font></td>
-    <td WIDTH="29%"><font SIZE="2"><b><p ALIGN="CENTER">OTHER INFORMATION</b></font></td>
+
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>LAST NAME</td>
+    <td>FIRST NAME</td>
+    <td>BIRTH DATE</td>
+    <td>DEATH DATE</td>
+    <td>OTHER INFORMATION</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">----</font></td>
-    <td WIDTH="18%"><font SIZE="2">J. A. C.</font></td>
-    <td WIDTH="18%"><font SIZE="2">no dates </font></td>
-    <td WIDTH="19%">&nbsp;</td>
-    <td WIDTH="29%"><font SIZE="2">(weathered stone)</font></td>
+    <td>----</td>
+    <td>J. A. C.</td>
+    <td>no dates </td>
+    <td>&nbsp;</td>
+    <td>(weathered stone)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">----</font></td>
-    <td WIDTH="18%"><font SIZE="2">T. B. C.</font></td>
-    <td WIDTH="18%"><font SIZE="2">no dates </font></td>
-    <td WIDTH="19%">&nbsp;</td>
-    <td WIDTH="29%"><font SIZE="2">(weathered stone)</font></td>
+    <td>----</td>
+    <td>T. B. C.</td>
+    <td>no dates </td>
+    <td>&nbsp;</td>
+    <td>(weathered stone)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">-------</font></td>
-    <td WIDTH="18%"><font SIZE="2">------</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="19%">&nbsp;</td>
-    <td WIDTH="29%"><font SIZE="2">Weathered wooden marker Enclosed in picket fence</font></td>
+    <td>-------</td>
+    <td>------</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>Weathered wooden marker Enclosed in picket fence</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">CARTER</font></td>
-    <td WIDTH="18%"><font SIZE="2">Bertha E.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1878</font></td>
-    <td WIDTH="19%"><font SIZE="2">1945</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>CARTER</td>
+    <td>Bertha E.</td>
+    <td>1878</td>
+    <td>1945</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">CARTER</font></td>
-    <td WIDTH="18%"><font SIZE="2">Bertrand J.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1904</font></td>
-    <td WIDTH="19%"><font SIZE="2">1925</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>CARTER</td>
+    <td>Bertrand J.</td>
+    <td>1904</td>
+    <td>1925</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">CARTER</font></td>
-    <td WIDTH="18%"><font SIZE="2">J. Bertrand</font></td>
-    <td WIDTH="18%"><font SIZE="2">17 Oct 190-</font></td>
-    <td WIDTH="19%"><font SIZE="2">1 Oct 1925 </font></td>
-    <td WIDTH="29%"><font SIZE="2">(this is the stone that was duplicated and leaning against
-    fence.)</font></td>
+    <td>CARTER</td>
+    <td>J. Bertrand</td>
+    <td>17 Oct 190-</td>
+    <td>1 Oct 1925 </td>
+    <td>(this is the stone that was duplicated and leaning against
+    fence.)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">CARTER</font></td>
-    <td WIDTH="18%"><font SIZE="2">Joe E.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1877</font></td>
-    <td WIDTH="19%"><font SIZE="2">1951 </font></td>
-    <td WIDTH="29%"><font SIZE="2">(Mort. M. Shaffer-Jensen)</font></td>
+    <td>CARTER</td>
+    <td>Joe E.</td>
+    <td>1877</td>
+    <td>1951 </td>
+    <td>(Mort. M. Shaffer-Jensen)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">FENTON</font></td>
-    <td WIDTH="18%"><font SIZE="2">John William</font></td>
-    <td WIDTH="18%"><font SIZE="2">11 Jan 1874</font></td>
-    <td WIDTH="19%"><font SIZE="2">2 Aug 1942</font></td>
-    <td WIDTH="29%"><font SIZE="2">Marshall Iowa <p>Juntura, Oregon &quot;Father&quot;</font></td>
+    <td>FENTON</td>
+    <td>John William</td>
+    <td>11 Jan 1874</td>
+    <td>2 Aug 1942</td>
+    <td>Marshall Iowa Juntura, Oregon &quot;Father&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">FRIESZ</font></td>
-    <td WIDTH="18%"><font SIZE="2">Eugene Gale</font></td>
-    <td WIDTH="18%"><font SIZE="2">1911</font></td>
-    <td WIDTH="19%"><font SIZE="2">1975</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>FRIESZ</td>
+    <td>Eugene Gale</td>
+    <td>1911</td>
+    <td>1975</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">FRIESZ</font></td>
-    <td WIDTH="18%"><font SIZE="2">Guss F.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1 Jan 1879</font></td>
-    <td WIDTH="19%"><font SIZE="2">15 Sep 1956</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>FRIESZ</td>
+    <td>Guss F.</td>
+    <td>1 Jan 1879</td>
+    <td>15 Sep 1956</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">FRIESZ</font></td>
-    <td WIDTH="18%"><font SIZE="2">Susie Frances</font></td>
-    <td WIDTH="18%"><font SIZE="2">30 Oct 1890</font></td>
-    <td WIDTH="19%"><font SIZE="2">8 Dec 1977</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>FRIESZ</td>
+    <td>Susie Frances</td>
+    <td>30 Oct 1890</td>
+    <td>8 Dec 1977</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">HOFFMAN</font></td>
-    <td WIDTH="18%"><font SIZE="2">Dorothy</font></td>
-    <td WIDTH="18%"><font SIZE="2">no dates </font></td>
-    <td WIDTH="19%">&nbsp;</td>
-    <td WIDTH="29%"><font SIZE="2">age 6m 15d</font></td>
+    <td>HOFFMAN</td>
+    <td>Dorothy</td>
+    <td>no dates </td>
+    <td>&nbsp;</td>
+    <td>age 6m 15d</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">HUGHES</font></td>
-    <td WIDTH="18%"><font SIZE="2">Lonnie</font></td>
-    <td WIDTH="18%"><font SIZE="2">2 Feb 1913</font></td>
-    <td WIDTH="19%"><font SIZE="2">13 Jul 1978</font></td>
-    <td WIDTH="29%"><font SIZE="2">Pvt. U.S. Army WW II</font></td>
+    <td>HUGHES</td>
+    <td>Lonnie</td>
+    <td>2 Feb 1913</td>
+    <td>13 Jul 1978</td>
+    <td>Pvt. U.S. Army WW II</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">LOWTRIP</font></td>
-    <td WIDTH="18%"><font SIZE="2">'Gene' Herman Eugene </font></td>
-    <td WIDTH="18%"><font SIZE="2">1921</font></td>
-    <td WIDTH="19%"><font SIZE="2">1972</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>LOWTRIP</td>
+    <td>'Gene' Herman Eugene </td>
+    <td>1921</td>
+    <td>1972</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">MACKEY</font></td>
-    <td WIDTH="18%"><font SIZE="2">A. B.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1836</font></td>
-    <td WIDTH="19%"><font SIZE="2">1927</font></td>
-    <td WIDTH="29%"><font SIZE="2">Old Stone nearby In Memory of A. B. Mackey 5 Jun 1836-24
-    Oct 1927</font></td>
+    <td>MACKEY</td>
+    <td>A. B.</td>
+    <td>1836</td>
+    <td>1927</td>
+    <td>Old Stone nearby In Memory of A. B. Mackey 5 Jun 1836-24
+    Oct 1927</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">MC CUMBER</font></td>
-    <td WIDTH="18%"><font SIZE="2">Emilie Helen Sizemore</font></td>
-    <td WIDTH="18%"><font SIZE="2">1871</font></td>
-    <td WIDTH="19%"><font SIZE="2">1938 </font></td>
-    <td WIDTH="29%"><font SIZE="2">&quot;Grandmother&quot;</font></td>
+    <td>MC CUMBER</td>
+    <td>Emilie Helen Sizemore</td>
+    <td>1871</td>
+    <td>1938 </td>
+    <td>&quot;Grandmother&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">MC CUMBER</font></td>
-    <td WIDTH="18%"><font SIZE="2">John W.</font></td>
-    <td WIDTH="18%"><font SIZE="2">25 May 1935 </font></td>
-    <td WIDTH="19%">&nbsp;</td>
-    <td WIDTH="29%"><font SIZE="2">(only date) Oregon Corp. 39 Field Arty. 13 Div.</font></td>
+    <td>MC CUMBER</td>
+    <td>John W.</td>
+    <td>25 May 1935 </td>
+    <td>&nbsp;</td>
+    <td>(only date) Oregon Corp. 39 Field Arty. 13 Div.</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">MC CUMBER</font></td>
-    <td WIDTH="18%"><font SIZE="2">Martin A.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1857</font></td>
-    <td WIDTH="19%"><font SIZE="2">1932 </font></td>
-    <td WIDTH="29%"><font SIZE="2">&quot;Grandfather&quot;</font></td>
+    <td>MC CUMBER</td>
+    <td>Martin A.</td>
+    <td>1857</td>
+    <td>1932 </td>
+    <td>&quot;Grandfather&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">MC CUMBER</font></td>
-    <td WIDTH="18%"><font SIZE="2">Robert B.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1889</font></td>
-    <td WIDTH="19%"><font SIZE="2">1936</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>MC CUMBER</td>
+    <td>Robert B.</td>
+    <td>1889</td>
+    <td>1936</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">NUTT</font></td>
-    <td WIDTH="18%"><font SIZE="2">--- es</font></td>
-    <td WIDTH="18%"><font SIZE="2">no dates</font></td>
-    <td WIDTH="19%">&nbsp;</td>
-    <td WIDTH="29%"><font SIZE="2">(weathered broken stone)</font></td>
+    <td>NUTT</td>
+    <td>--- es</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
+    <td>(weathered broken stone)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">NUTT</font></td>
-    <td WIDTH="18%"><font SIZE="2">Elmira J.</font></td>
-    <td WIDTH="18%"><font SIZE="2">20 Jun 1880</font></td>
-    <td WIDTH="19%"><font SIZE="2">2 Jan 1934</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>NUTT</td>
+    <td>Elmira J.</td>
+    <td>20 Jun 1880</td>
+    <td>2 Jan 1934</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">RICHEY</font></td>
-    <td WIDTH="18%"><font SIZE="2">Avary Smith</font></td>
-    <td WIDTH="18%"><font SIZE="2">6 Sep 1876 </font></td>
-    <td WIDTH="19%"><font SIZE="2">16 Apr 1921</font></td>
-    <td WIDTH="29%"><font SIZE="2">(enclosed board fence)</font></td>
+    <td>RICHEY</td>
+    <td>Avary Smith</td>
+    <td>6 Sep 1876 </td>
+    <td>16 Apr 1921</td>
+    <td>(enclosed board fence)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">RICHEY</font></td>
-    <td WIDTH="18%"><font SIZE="2">Roy Arthur</font></td>
-    <td WIDTH="18%"><font SIZE="2">11 Mar 1897 </font></td>
-    <td WIDTH="19%"><font SIZE="2">12 Sep 1966</font></td>
-    <td WIDTH="29%"><font SIZE="2">Oregon Pvt. Co. A 16 Inf. WW I &amp; II</font></td>
+    <td>RICHEY</td>
+    <td>Roy Arthur</td>
+    <td>11 Mar 1897 </td>
+    <td>12 Sep 1966</td>
+    <td>Oregon Pvt. Co. A 16 Inf. WW I &amp; II</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">RORABAUGH</font></td>
-    <td WIDTH="18%"><font SIZE="2">Henry Edward</font></td>
-    <td WIDTH="18%"><font SIZE="2">4 Apr 1891</font></td>
-    <td WIDTH="19%"><font SIZE="2">29 Nov 1969</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>RORABAUGH</td>
+    <td>Henry Edward</td>
+    <td>4 Apr 1891</td>
+    <td>29 Nov 1969</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">SIZEMORE</font></td>
-    <td WIDTH="18%"><font SIZE="2">Edward L.</font></td>
-    <td WIDTH="18%"><font SIZE="2">18 May 1874</font></td>
-    <td WIDTH="19%"><font SIZE="2">23 Jun 1940</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>SIZEMORE</td>
+    <td>Edward L.</td>
+    <td>18 May 1874</td>
+    <td>23 Jun 1940</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">SIZEMORE</font></td>
-    <td WIDTH="18%"><font SIZE="2">Elizabeth</font></td>
-    <td WIDTH="18%"><font SIZE="2">27 Mar 1853</font></td>
-    <td WIDTH="19%"><font SIZE="2">10 Jan 1934</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>SIZEMORE</td>
+    <td>Elizabeth</td>
+    <td>27 Mar 1853</td>
+    <td>10 Jan 1934</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">TALBERT</font></td>
-    <td WIDTH="18%"><font SIZE="2">Porter G.</font></td>
-    <td WIDTH="18%"><font SIZE="2">14 Jan 1886</font></td>
-    <td WIDTH="19%"><font SIZE="2">11 Aug 1960</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>TALBERT</td>
+    <td>Porter G.</td>
+    <td>14 Jan 1886</td>
+    <td>11 Aug 1960</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">WALTERS</font></td>
-    <td WIDTH="18%"><font SIZE="2">William F.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1915</font></td>
-    <td WIDTH="19%"><font SIZE="2">1937</font></td>
-    <td WIDTH="29%"><font SIZE="2">(enclosed with cyclone fence)</font></td>
+    <td>WALTERS</td>
+    <td>William F.</td>
+    <td>1915</td>
+    <td>1937</td>
+    <td>(enclosed with cyclone fence)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">WOODWARD</font></td>
-    <td WIDTH="18%"><font SIZE="2">Francis C.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1867</font></td>
-    <td WIDTH="19%"><font SIZE="2">1919</font></td>
-    <td WIDTH="29%"><font SIZE="2">(double stone)</font></td>
+    <td>WOODWARD</td>
+    <td>Francis C.</td>
+    <td>1867</td>
+    <td>1919</td>
+    <td>(double stone)</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">WOODWARD</font></td>
-    <td WIDTH="18%"><font SIZE="2">Thomas L.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1866</font></td>
-    <td WIDTH="19%"><font SIZE="2">1938</font></td>
-    <td WIDTH="29%"><font SIZE="2">(double stone) Enclosed with iron fence</font></td>
+    <td>WOODWARD</td>
+    <td>Thomas L.</td>
+    <td>1866</td>
+    <td>1938</td>
+    <td>(double stone) Enclosed with iron fence</td>
   </tr>
 </table>
 
-<p>&nbsp;</p>
+&nbsp;
 </body>
 </html>
