--- a/mcr/oldjuntura.html
+++ b/mcr/oldjuntura.html
@@ -6,89 +6,89 @@
 </head>
 
 <body>
-<font SIZE="2">
 
-<p ALIGN="CENTER">OLD CEMETERY</p>
 
-<p ALIGN="CENTER">Juntura, Oregon</p>
+OLD CEMETERY
 
-<p ALIGN="CENTER">1983</p>
+Juntura, Oregon
 
-<p ALIGN="CENTER">(R38E T21S)</p>
+1983
 
-<p>This cemetery is located an Highway 20, 1/4 mile west of town. The cemetery is fenced
+(R38E T21S)
+
+This cemetery is located an Highway 20, 1/4 mile west of town. The cemetery is fenced
 in and located in the middle of a rancher's field. It is overgrown with greasewood. Cows
 have broken the fence and knocked over some headstones. Some of the graves are unmarked
-and obliterated by animals. Records compiled by Grant and Sybil Higley.</p>
+and obliterated by animals. Records compiled by Grant and Sybil Higley.
 
-<p></font>&nbsp;</p>
+&nbsp;
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="590">
+<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
   <tr>
-    <td WIDTH="16%"><font SIZE="2"><b><p ALIGN="CENTER">LAST NAME</b></font></td>
-    <td WIDTH="17%"><font SIZE="2"><b><p ALIGN="CENTER">FIRST NAME</b></font></td>
-    <td WIDTH="17%"><font SIZE="2"><b><p ALIGN="CENTER">BIRTH DATE</b></font></td>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">DEATH DATE</b></font></td>
-    <td WIDTH="30%"><font SIZE="2"><b><p ALIGN="CENTER">OTHER INFORMATION</b></font></td>
+    <td>LAST NAME</td>
+    <td>FIRST NAME</td>
+    <td>BIRTH DATE</td>
+    <td>DEATH DATE</td>
+    <td>OTHER INFORMATION</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">DULL</font></td>
-    <td WIDTH="17%"><font SIZE="2">L. B.</font></td>
-    <td WIDTH="17%"><font SIZE="2">8 Jun 1877</font></td>
-    <td WIDTH="19%"><font SIZE="2">9 Sep 1909</font></td>
-    <td WIDTH="30%">&nbsp;</td>
+    <td>DULL</td>
+    <td>L. B.</td>
+    <td>8 Jun 1877</td>
+    <td>9 Sep 1909</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">HICKEY</font></td>
-    <td WIDTH="17%"><font SIZE="2">Roma</font></td>
-    <td WIDTH="17%"><font SIZE="2">18 Jul 1898</font></td>
-    <td WIDTH="19%"><font SIZE="2">21 May 1902</font></td>
-    <td WIDTH="30%"><font SIZE="2">d/o J.M. &amp; E. J. (Double stone)</font></td>
+    <td>HICKEY</td>
+    <td>Roma</td>
+    <td>18 Jul 1898</td>
+    <td>21 May 1902</td>
+    <td>d/o J.M. &amp; E. J. (Double stone)</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">HICKEY</font></td>
-    <td WIDTH="17%"><font SIZE="2">Ola M.</font></td>
-    <td WIDTH="17%"><font SIZE="2">4 Jan 1891</font></td>
-    <td WIDTH="19%"><font SIZE="2">23 Nov 1902</font></td>
-    <td WIDTH="30%"><font SIZE="2">d/o J. M. &amp; E. J. (Double Stone)</font></td>
+    <td>HICKEY</td>
+    <td>Ola M.</td>
+    <td>4 Jan 1891</td>
+    <td>23 Nov 1902</td>
+    <td>d/o J. M. &amp; E. J. (Double Stone)</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">SELLE</font></td>
-    <td WIDTH="17%"><font SIZE="2">Christoph</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="19%"><font SIZE="2">7 Jun 1899</font></td>
-    <td WIDTH="30%"><font SIZE="2">age 77y 10m 1d</font></td>
+    <td>SELLE</td>
+    <td>Christoph</td>
+    <td>&nbsp;</td>
+    <td>7 Jun 1899</td>
+    <td>age 77y 10m 1d</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">SELLE</font></td>
-    <td WIDTH="17%"><font SIZE="2">Suna</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="19%"><font SIZE="2">6 Dec 1893</font></td>
-    <td WIDTH="30%"><font SIZE="2">age 71y 9m 22d w/o C. Selle</font></td>
+    <td>SELLE</td>
+    <td>Suna</td>
+    <td>&nbsp;</td>
+    <td>6 Dec 1893</td>
+    <td>age 71y 9m 22d w/o C. Selle</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">CLAUDE</font></td>
-    <td WIDTH="17%"><font SIZE="2">Felix</font></td>
-    <td WIDTH="17%"><font SIZE="2">1844</font></td>
-    <td WIDTH="19%"><font SIZE="2">1900</font></td>
-    <td WIDTH="30%">&nbsp;</td>
+    <td>CLAUDE</td>
+    <td>Felix</td>
+    <td>1844</td>
+    <td>1900</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">SIZEMORE</font></td>
-    <td WIDTH="17%"><font SIZE="2">J.A.</font></td>
-    <td WIDTH="17%"><font SIZE="2">14 Oct 1844</font></td>
-    <td WIDTH="19%"><font SIZE="2">4 Jun 1901</font></td>
-    <td WIDTH="30%"><font SIZE="2">Double Stone</font></td>
+    <td>SIZEMORE</td>
+    <td>J.A.</td>
+    <td>14 Oct 1844</td>
+    <td>4 Jun 1901</td>
+    <td>Double Stone</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">SIZEMORE</font></td>
-    <td WIDTH="17%"><font SIZE="2">Mollie</font></td>
-    <td WIDTH="17%"><font SIZE="2">23 Feb 1877</font></td>
-    <td WIDTH="19%"><font SIZE="2">3 Sep 1888</font></td>
-    <td WIDTH="30%"><font SIZE="2">J.A. &amp; S. E. Double Stone</font></td>
+    <td>SIZEMORE</td>
+    <td>Mollie</td>
+    <td>23 Feb 1877</td>
+    <td>3 Sep 1888</td>
+    <td>J.A. &amp; S. E. Double Stone</td>
   </tr>
 </table>
 
-<p>&nbsp;</p>
+&nbsp;
 </body>
 </html>
