--- a/mcr/pioneeroc.html
+++ b/mcr/pioneeroc.html
@@ -6,98 +6,98 @@
 </head>
 
 <body>
-<font SIZE="2">
 
-<p ALIGN="CENTER">PIONEER CEMETERY</p>
 
-<p ALIGN="CENTER">Pioneer Road (North of Ontario, Oregon)</p>
+PIONEER CEMETERY
 
-<p ALIGN="CENTER">&nbsp;</p>
+Pioneer Road (North of Ontario, Oregon)
 
-<p>High on the Dead Ox Flats over-looking the Snake River is indeed a pioneer cemetery.
+&nbsp;
+
+High on the Dead Ox Flats over-looking the Snake River is indeed a pioneer cemetery.
 There are no markers at all, nor are there any mounds to indicate the graves, but several
 parties have information concerning those persons who were buried there. All known names
-and dates are listed on this page. </font></p>
+and dates are listed on this page. 
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="607">
+<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
   <tr>
-    <td WIDTH="16%"><font SIZE="2"><b><p ALIGN="CENTER">LAST NAME</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b><p ALIGN="CENTER">FIRST NAME</b></font></td>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">BIRTH DATE</b></font></td>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">DEATH DATE</b></font></td>
-    <td WIDTH="29%"><font SIZE="2"><b><p ALIGN="CENTER">OTHER INFORMATION</b></font></td>
+    <td>LAST NAME</td>
+    <td>FIRST NAME</td>
+    <td>BIRTH DATE</td>
+    <td>DEATH DATE</td>
+    <td>OTHER INFORMATION</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Applegate</font></td>
-    <td WIDTH="18%"><font SIZE="2">James Jonathan</font></td>
-    <td WIDTH="19%"><font SIZE="2">Sept 11 1900</font></td>
-    <td WIDTH="19%"><font SIZE="2">2 Apr 1914</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Applegate</td>
+    <td>James Jonathan</td>
+    <td>Sept 11 1900</td>
+    <td>2 Apr 1914</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Clauson</font></td>
-    <td WIDTH="18%"><font SIZE="2">Mr.</font></td>
-    <td WIDTH="38%" COLSPAN="2"><font SIZE="2">No dates</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Clauson</td>
+    <td>Mr.</td>
+    <td>No dates</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Duncan</font></td>
-    <td WIDTH="18%"><font SIZE="2">Child</font></td>
-    <td WIDTH="38%" COLSPAN="2"><font SIZE="2">no dates</font></td>
-    <td WIDTH="29%"><font SIZE="2">Relatives unknown, died during dyptheria epidemic</font></td>
+    <td>Duncan</td>
+    <td>Child</td>
+    <td>no dates</td>
+    <td>Relatives unknown, died during dyptheria epidemic</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Erickson</font></td>
-    <td WIDTH="18%"><font SIZE="2">Three Children</font></td>
-    <td WIDTH="38%" COLSPAN="2">&nbsp;</td>
-    <td WIDTH="29%"><font SIZE="2">three children died during dyptheria epidemic</font></td>
+    <td>Erickson</td>
+    <td>Three Children</td>
+    <td>&nbsp;</td>
+    <td>three children died during dyptheria epidemic</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Hopper</font></td>
-    <td WIDTH="18%"><font SIZE="2">Anna S.</font></td>
-    <td WIDTH="19%"><font SIZE="2">Aug 30, 1884</font></td>
-    <td WIDTH="19%"><font SIZE="2">Jan 13, 1892</font></td>
-    <td WIDTH="29%"><font SIZE="2">died during dyptheria epidemic</font></td>
+    <td>Hopper</td>
+    <td>Anna S.</td>
+    <td>Aug 30, 1884</td>
+    <td>Jan 13, 1892</td>
+    <td>died during dyptheria epidemic</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Hopper</font></td>
-    <td WIDTH="18%"><font SIZE="2">Mary O.</font></td>
-    <td WIDTH="19%"><font SIZE="2">May 9, 1886</font></td>
-    <td WIDTH="19%"><font SIZE="2">Jan 11, 1892</font></td>
-    <td WIDTH="29%"><font SIZE="2">died during dyptheria epidemic</font></td>
+    <td>Hopper</td>
+    <td>Mary O.</td>
+    <td>May 9, 1886</td>
+    <td>Jan 11, 1892</td>
+    <td>died during dyptheria epidemic</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Lewis</font></td>
-    <td WIDTH="18%"><font SIZE="2">no given name</font></td>
-    <td WIDTH="38%" COLSPAN="2"><font SIZE="2">no dates</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Lewis</td>
+    <td>no given name</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Picklers</font></td>
-    <td WIDTH="18%"><font SIZE="2">no given name</font></td>
-    <td WIDTH="38%" COLSPAN="2"><font SIZE="2">no dates</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Picklers</td>
+    <td>no given name</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Randall</font></td>
-    <td WIDTH="18%"><font SIZE="2">Billy</font></td>
-    <td WIDTH="38%" COLSPAN="2"><font SIZE="2">no dates</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Randall</td>
+    <td>Billy</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Shepard</font></td>
-    <td WIDTH="18%"><font SIZE="2">no given name</font></td>
-    <td WIDTH="38%" COLSPAN="2"><font SIZE="2">no dates</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Shepard</td>
+    <td>no given name</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Strobel</font></td>
-    <td WIDTH="18%"><font SIZE="2">no given name</font></td>
-    <td WIDTH="38%" COLSPAN="2"><font SIZE="2">no dates</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Strobel</td>
+    <td>no given name</td>
+    <td>no dates</td>
+    <td>&nbsp;</td>
   </tr>
 </table>
 
-<p>&nbsp;</p>
+&nbsp;
 </body>
 </html>
