--- a/mcr/riverside.html
+++ b/mcr/riverside.html
@@ -6,221 +6,221 @@
 </head>
 
 <body>
-<font SIZE="2">
 
-<p ALIGN="CENTER">RIVERSIDE CEMETERY</p>
 
-<p ALIGN="CENTER">Riverside, Malheur County, Oregon</p>
+RIVERSIDE CEMETERY
 
-<p>At a junction of South and Middle Fork of Malheur River near Riverside, Oregon. T 23, R
-37E, S 22. Records compiled by Grant and Sybil Higley.</font></p>
+Riverside, Malheur County, Oregon
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="601">
+At a junction of South and Middle Fork of Malheur River near Riverside, Oregon. T 23, R
+37E, S 22. Records compiled by Grant and Sybil Higley.
+
+<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
   <tr>
-    <td WIDTH="16%"><font SIZE="2"><b>Last Name</b></font></td>
-    <td WIDTH="21%"><font SIZE="2"><b>First Name</b></font></td>
-    <td WIDTH="16%"><font SIZE="2"><b>Birth Date</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b>Death Date</b></font></td>
-    <td WIDTH="29%"><font SIZE="2"><b>Other Information</b></font></td>
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">&quot;Greek&quot;</font></td>
-    <td WIDTH="21%">&nbsp;</td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">1918</font></td>
-    <td WIDTH="29%"><font SIZE="2">killed</font></td>
+    <td>&quot;Greek&quot;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>1918</td>
+    <td>killed</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">&quot;Greek&quot;</font></td>
-    <td WIDTH="21%">&nbsp;</td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">1918</font></td>
-    <td WIDTH="29%"><font SIZE="2">killed</font></td>
+    <td>&quot;Greek&quot;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>1918</td>
+    <td>killed</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Armstrong</font></td>
-    <td WIDTH="21%"><font SIZE="2">M. L. Hunt</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">27 Nov 1918</font></td>
-    <td WIDTH="29%"><font SIZE="2">age 36 yrs. 7 mo. 13 days w/o E. L.</font></td>
+    <td>Armstrong</td>
+    <td>M. L. Hunt</td>
+    <td>&nbsp;</td>
+    <td>27 Nov 1918</td>
+    <td>age 36 yrs. 7 mo. 13 days w/o E. L.</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Bain</font></td>
-    <td WIDTH="21%"><font SIZE="2">Robert</font></td>
-    <td WIDTH="16%"><font SIZE="2">2 Apr 1844</font></td>
-    <td WIDTH="18%"><font SIZE="2">20 Nov 1930</font></td>
-    <td WIDTH="29%"><font SIZE="2">wooden marker</font></td>
+    <td>Bain</td>
+    <td>Robert</td>
+    <td>2 Apr 1844</td>
+    <td>20 Nov 1930</td>
+    <td>wooden marker</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Barber</font></td>
-    <td WIDTH="21%"><font SIZE="2">James</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">11 Nov 1923</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Barber</td>
+    <td>James</td>
+    <td>&nbsp;</td>
+    <td>11 Nov 1923</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Barkley</font></td>
-    <td WIDTH="21%"><font SIZE="2">Florence M.</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">1910</font></td>
-    <td WIDTH="29%"><font SIZE="2">infant&#151;wooden cross with metal marker</font></td>
+    <td>Barkley</td>
+    <td>Florence M.</td>
+    <td>&nbsp;</td>
+    <td>1910</td>
+    <td>infant&#151;wooden cross with metal marker</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">Hugh Edward</font></td>
-    <td WIDTH="16%"><font SIZE="2">25 May 1880</font></td>
-    <td WIDTH="18%"><font SIZE="2">8 Nov 1925</font></td>
-    <td WIDTH="29%"><font SIZE="2">&quot;Edd&quot;</font></td>
+    <td>Blaylock</td>
+    <td>Hugh Edward</td>
+    <td>25 May 1880</td>
+    <td>8 Nov 1925</td>
+    <td>&quot;Edd&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">Jerimah C.</font></td>
-    <td WIDTH="16%"><font SIZE="2">28 Jan 1841</font></td>
-    <td WIDTH="18%"><font SIZE="2">8 May 1912</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Blaylock</td>
+    <td>Jerimah C.</td>
+    <td>28 Jan 1841</td>
+    <td>8 May 1912</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">Lee Wayne</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">25 Jun 1910</font></td>
-    <td WIDTH="29%"><font SIZE="2">2 yrs, 5 mo, 17 days<p>s/o S.E. &amp; R.E.</font></td>
+    <td>Blaylock</td>
+    <td>Lee Wayne</td>
+    <td>&nbsp;</td>
+    <td>25 Jun 1910</td>
+    <td>2 yrs, 5 mo, 17 dayss/o S.E. &amp; R.E.</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">Minnie Edith</font></td>
-    <td WIDTH="16%"><font SIZE="2">19 Mar 1891</font></td>
-    <td WIDTH="18%"><font SIZE="2">12 Aug 1974</font></td>
-    <td WIDTH="29%"><font SIZE="2">&quot;Mom&quot;</font></td>
+    <td>Blaylock</td>
+    <td>Minnie Edith</td>
+    <td>19 Mar 1891</td>
+    <td>12 Aug 1974</td>
+    <td>&quot;Mom&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">Samuel Elmer</font></td>
-    <td WIDTH="16%"><font SIZE="2">22 Mar 1882</font></td>
-    <td WIDTH="18%"><font SIZE="2">12 Mar 1922</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Blaylock</td>
+    <td>Samuel Elmer</td>
+    <td>22 Mar 1882</td>
+    <td>12 Mar 1922</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">Susan J.</font></td>
-    <td WIDTH="16%"><font SIZE="2">8 Dec 1848</font></td>
-    <td WIDTH="18%"><font SIZE="2">2 Jul 1916</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Blaylock</td>
+    <td>Susan J.</td>
+    <td>8 Dec 1848</td>
+    <td>2 Jul 1916</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">Sylvia</font></td>
-    <td WIDTH="16%"><font SIZE="2">9 Aug 1910</font></td>
-    <td WIDTH="18%"><font SIZE="2">31 Mar 1979</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Blaylock</td>
+    <td>Sylvia</td>
+    <td>9 Aug 1910</td>
+    <td>31 Mar 1979</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Blaylock</font></td>
-    <td WIDTH="21%"><font SIZE="2">William Lee</font></td>
-    <td WIDTH="16%"><font SIZE="2">23 Mar 1874</font></td>
-    <td WIDTH="18%"><font SIZE="2">16 May 1952</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Blaylock</td>
+    <td>William Lee</td>
+    <td>23 Mar 1874</td>
+    <td>16 May 1952</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Brown</font></td>
-    <td WIDTH="21%"><font SIZE="2">Infant Son</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">28 Jan 1918</font></td>
-    <td WIDTH="29%"><font SIZE="2">Wooden cross</font></td>
+    <td>Brown</td>
+    <td>Infant Son</td>
+    <td>&nbsp;</td>
+    <td>28 Jan 1918</td>
+    <td>Wooden cross</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Brown</font></td>
-    <td WIDTH="21%"><font SIZE="2">Susie A. Cox</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">17 Feb 1918</font></td>
-    <td WIDTH="29%"><font SIZE="2">27 yrs, 9 mo, 10 days, w/o Charles B.</font></td>
+    <td>Brown</td>
+    <td>Susie A. Cox</td>
+    <td>&nbsp;</td>
+    <td>17 Feb 1918</td>
+    <td>27 yrs, 9 mo, 10 days, w/o Charles B.</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Cox</font></td>
-    <td WIDTH="21%"><font SIZE="2">Florence Ophelia</font></td>
-    <td WIDTH="16%"><font SIZE="2">2 Feb 1872</font></td>
-    <td WIDTH="18%"><font SIZE="2">2 Jan 1946</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Cox</td>
+    <td>Florence Ophelia</td>
+    <td>2 Feb 1872</td>
+    <td>2 Jan 1946</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Cox</font></td>
-    <td WIDTH="21%"><font SIZE="2">George W.</font></td>
-    <td WIDTH="16%"><font SIZE="2">1856</font></td>
-    <td WIDTH="18%"><font SIZE="2">1925</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Cox</td>
+    <td>George W.</td>
+    <td>1856</td>
+    <td>1925</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Dutton</font></td>
-    <td WIDTH="21%"><font SIZE="2">Raymond Warren</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">20 Dec 1918</font></td>
-    <td WIDTH="29%"><font SIZE="2">age 21 years</font></td>
+    <td>Dutton</td>
+    <td>Raymond Warren</td>
+    <td>&nbsp;</td>
+    <td>20 Dec 1918</td>
+    <td>age 21 years</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Lewis</font></td>
-    <td WIDTH="21%"><font SIZE="2">Sheepherder</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">abt 1920</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Lewis</td>
+    <td>Sheepherder</td>
+    <td>&nbsp;</td>
+    <td>abt 1920</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Lucas</font></td>
-    <td WIDTH="21%"><font SIZE="2">Rozella</font></td>
-    <td WIDTH="16%"><font SIZE="2">Jul 1913</font></td>
-    <td WIDTH="18%"><font SIZE="2">Aug 1914</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Lucas</td>
+    <td>Rozella</td>
+    <td>Jul 1913</td>
+    <td>Aug 1914</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Rogers</font></td>
-    <td WIDTH="21%"><font SIZE="2">Ezra </font></td>
-    <td WIDTH="16%"><font SIZE="2">20 Nov 1852</font></td>
-    <td WIDTH="18%"><font SIZE="2">9 Jul 1936</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Rogers</td>
+    <td>Ezra </td>
+    <td>20 Nov 1852</td>
+    <td>9 Jul 1936</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Rogers</font></td>
-    <td WIDTH="21%"><font SIZE="2">Phebe Ann</font></td>
-    <td WIDTH="16%"><font SIZE="2">14 Oct 1859</font></td>
-    <td WIDTH="18%"><font SIZE="2">11 May1932</font></td>
-    <td WIDTH="29%">&nbsp;</td>
+    <td>Rogers</td>
+    <td>Phebe Ann</td>
+    <td>14 Oct 1859</td>
+    <td>11 May1932</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Shumway</font></td>
-    <td WIDTH="21%"><font SIZE="2">Martha Ann</font></td>
-    <td WIDTH="16%"><font SIZE="2">1836</font></td>
-    <td WIDTH="18%"><font SIZE="2">1926</font></td>
-    <td WIDTH="29%"><font SIZE="2">&quot;Mother&quot;</font></td>
+    <td>Shumway</td>
+    <td>Martha Ann</td>
+    <td>1836</td>
+    <td>1926</td>
+    <td>&quot;Mother&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Simmons</font></td>
-    <td WIDTH="21%"><font SIZE="2">Fitz</font></td>
-    <td WIDTH="16%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">abt 1917</font></td>
-    <td WIDTH="29%"><font SIZE="2">wooden marker</font></td>
+    <td>Simmons</td>
+    <td>Fitz</td>
+    <td>&nbsp;</td>
+    <td>abt 1917</td>
+    <td>wooden marker</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Wilson</font></td>
-    <td WIDTH="21%"><font SIZE="2">Ada</font></td>
-    <td WIDTH="16%"><font SIZE="2">24 May 1878</font></td>
-    <td WIDTH="18%"><font SIZE="2">3 Jan 1919</font></td>
-    <td WIDTH="29%"><font SIZE="2">triple stone</font></td>
+    <td>Wilson</td>
+    <td>Ada</td>
+    <td>24 May 1878</td>
+    <td>3 Jan 1919</td>
+    <td>triple stone</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Wilson</font></td>
-    <td WIDTH="21%"><font SIZE="2">Iva Kimball</font></td>
-    <td WIDTH="16%"><font SIZE="2">6 May 1898</font></td>
-    <td WIDTH="18%"><font SIZE="2">31 Oct 1922</font></td>
-    <td WIDTH="29%"><font SIZE="2">triple stone</font></td>
+    <td>Wilson</td>
+    <td>Iva Kimball</td>
+    <td>6 May 1898</td>
+    <td>31 Oct 1922</td>
+    <td>triple stone</td>
   </tr>
   <tr>
-    <td WIDTH="16%"><font SIZE="2">Wilson</font></td>
-    <td WIDTH="21%"><font SIZE="2">Levi</font></td>
-    <td WIDTH="16%"><font SIZE="2">7 May 1866</font></td>
-    <td WIDTH="18%"><font SIZE="2">3 Dec 1932</font></td>
-    <td WIDTH="29%"><font SIZE="2">triple stone</font></td>
+    <td>Wilson</td>
+    <td>Levi</td>
+    <td>7 May 1866</td>
+    <td>3 Dec 1932</td>
+    <td>triple stone</td>
   </tr>
 </table>
 
-<p>&nbsp;</p>
+&nbsp;
 </body>
 </html>
