--- a/mcr/watsonc.html
+++ b/mcr/watsonc.html
@@ -6,55 +6,55 @@
 </head> 
  
 <body> 
-<font SIZE="2"> 
  
-<p ALIGN="CENTER">WATSON CEMETERY</p> 
  
-<p>Watson Oregon no longer exists. The Owyhee reservoir now covers the town of Watson. The
+WATSON CEMETERY 
+ 
+Watson Oregon no longer exists. The Owyhee reservoir now covers the town of Watson. The
 cemetery is up on a hill above where the town used to be. It is accessible only by boat.
 The cemetery is located on the south side of Owyhee reservoir. Records from this cemetery
 were compiled by Grant and Sybil Higley, with help from the Malheur County Sheriffs
-Department.</font></p> 
+Department. 
  
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="589"> 
+<table BORDER="1" CELLSPACING="1" CELLPADDING="7"> 
   <tr> 
-    <td WIDTH="20%"><font SIZE="2"><b>Last name</b></font></td> 
-    <td WIDTH="20%"><font SIZE="2"><b>first name</b></font></td> 
-    <td WIDTH="20%"><font SIZE="2"><b>birth date</b></font></td> 
-    <td WIDTH="20%"><font SIZE="2"><b>death date</b></font></td> 
-    <td WIDTH="20%"><font SIZE="2"><b>other information</b></font></td> 
+    <td>Last name</td> 
+    <td>first name</td> 
+    <td>birth date</td> 
+    <td>death date</td> 
+    <td>other information</td> 
   </tr> 
   <tr> 
-    <td WIDTH="20%"><font SIZE="2">Franks</font></td> 
-    <td WIDTH="20%"><font SIZE="2">George</font></td> 
-    <td WIDTH="20%"><font SIZE="2">23 Dec 1973</font></td> 
-    <td WIDTH="20%"><font SIZE="2">7 Sep 1916</font></td> 
-    <td WIDTH="20%">&nbsp;</td> 
+    <td>Franks</td> 
+    <td>George</td> 
+    <td>23 Dec 1973</td> 
+    <td>7 Sep 1916</td> 
+    <td>&nbsp;</td> 
   </tr> 
   <tr> 
-    <td WIDTH="20%"><font SIZE="2">page</font></td> 
-    <td WIDTH="20%"><font SIZE="2">Janet M.</font></td> 
-    <td WIDTH="20%"><font SIZE="2">16 Jan 1862</font></td> 
-    <td WIDTH="20%"><font SIZE="2">11 Oct 1915</font></td> 
-    <td WIDTH="20%"><font SIZE="2">Mother</font></td> 
+    <td>page</td> 
+    <td>Janet M.</td> 
+    <td>16 Jan 1862</td> 
+    <td>11 Oct 1915</td> 
+    <td>Mother</td> 
   </tr> 
   <tr> 
-    <td WIDTH="20%"><font SIZE="2">page</font></td> 
-    <td WIDTH="20%"><font SIZE="2">Miller</font></td> 
-    <td WIDTH="20%"><font SIZE="2">16 Jan 1851</font></td> 
-    <td WIDTH="20%"><font SIZE="2">13 Jan 1918</font></td> 
-    <td WIDTH="20%"><font SIZE="2">Father</font></td> 
+    <td>page</td> 
+    <td>Miller</td> 
+    <td>16 Jan 1851</td> 
+    <td>13 Jan 1918</td> 
+    <td>Father</td> 
   </tr> 
   <tr> 
-    <td WIDTH="20%"><font SIZE="2">shaver</font></td> 
-    <td WIDTH="20%"><font SIZE="2">Josephene</font></td> 
-    <td WIDTH="20%"><font SIZE="2">17 Nov 1857</font></td> 
-    <td WIDTH="20%"><font SIZE="2">12 Mar 1916</font></td> 
-    <td WIDTH="20%">&nbsp;</td> 
+    <td>shaver</td> 
+    <td>Josephene</td> 
+    <td>17 Nov 1857</td> 
+    <td>12 Mar 1916</td> 
+    <td>&nbsp;</td> 
   </tr> 
 </table> 
-<font SIZE="2"> 
  
-<p>There are 3 unmarked graves</font></p> 
+ 
+There are 3 unmarked graves 
 </body> 
 </html> 
