--- a/mcr/Broganc.html
+++ b/mcr/Broganc.html
@@ -1,237 +1,229 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Brogan Cemetery</title>
-</head>
+<div class="mcr-title">Brogan Cemetery</div>
 
-<body>
-<font SIZE="2">
+<p>Near Brogan, Oregon</p>
 
-<p ALIGN="CENTER">BROGAN CEMETERY</p>
-
-<p ALIGN="CENTER">Near Brogan, Oregon</p>
-
-<p ALIGN="CENTER">1983</p>
+<p>1983</p>
 
 <p>The Brogan Cemetery is located about 3 miles from Highway 26. There is a dirt road
 leading to this beautiful well kept cemetery. The grounds are enclosed with a fence. The
 grass is well maintained. There is a total of 42 graves. Fourteen graves are unmarked or
-the markers are illegible. </p>
+the markers are illegible.</p>
 
-<p>T 15S, R 42E, S 26. Records compiled by: Barbara McCormick and her sister Pat.</font></p>
+<p>T 15S, R 42E, S 26. Records compiled by: Barbara McCormick and her sister Pat.</p>
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="590">
-  <tr>
-    <td WIDTH="23%"><font SIZE="2"><b>Last Name</b></font></td>
-    <td WIDTH="20%"><font SIZE="2"><b>First Name</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b>Birth Date</b></font></td>
-    <td WIDTH="17%"><font SIZE="2"><b>Death Date</b></font></td>
-    <td WIDTH="22%"><font SIZE="2"><b>Other Information</b></font></td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td><b>Last Name</b></td>
+    <td><b>First Name</b></td>
+    <td><b>Birth Date</b></td>
+    <td><b>Death Date</b></td>
+    <td><b>Other Information</b></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">BURKE </font></td>
-    <td WIDTH="20%"><font SIZE="2">Stephen Denny</font></td>
-    <td WIDTH="18%"><font SIZE="2">Dec 29, 1890</font></td>
-    <td WIDTH="17%"><font SIZE="2">May 11, 1972</font></td>
-    <td WIDTH="22%"> </td>
+    <td>BURKE</td>
+    <td>Stephen Denny</td>
+    <td>Dec 29, 1890</td>
+    <td>May 11, 1972</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">BUSH</font></td>
-    <td WIDTH="20%"><font SIZE="2">Ernest</font></td>
-    <td WIDTH="18%"><font SIZE="2">1875</font></td>
-    <td WIDTH="17%"><font SIZE="2">1947</font></td>
-    <td WIDTH="22%"><font SIZE="2">(mortuary marker)</font></td>
+    <td>BUSH</td>
+    <td>Ernest</td>
+    <td>1875</td>
+    <td>1947</td>
+    <td>(mortuary marker)</td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">CHESTER </font></td>
-    <td WIDTH="20%"><font SIZE="2">Geraldine Joan </font></td>
-    <td WIDTH="18%"><font SIZE="2">1938 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1954</font></td>
-    <td WIDTH="22%"> </td>
+    <td>CHESTER</td>
+    <td>Geraldine Joan</td>
+    <td>1938</td>
+    <td>1954</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">CLARK</font></td>
-    <td WIDTH="20%"><font SIZE="2">Hannah M. "Minnie" </font></td>
-    <td WIDTH="18%"><font SIZE="2">1869 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1917</font></td>
-    <td WIDTH="22%"> </td>
+    <td>CLARK</td>
+    <td>Hannah M. &quot;Minnie&quot;</td>
+    <td>1869</td>
+    <td>1917</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">DONNELLY </font></td>
-    <td WIDTH="20%"><font SIZE="2">Hariet</font></td>
-    <td WIDTH="18%"><font SIZE="2">Nov 18, 1860 </font></td>
-    <td WIDTH="17%"><font SIZE="2">Jan 19, 1917 </font></td>
-    <td WIDTH="22%"><font SIZE="2">w/o Edwards DONNELLY</font></td>
+    <td>DONNELLY</td>
+    <td>Hariet</td>
+    <td>Nov 18, 1860</td>
+    <td>Jan 19, 1917</td>
+    <td>w/o Edwards DONNELLY</td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">FOILES</font></td>
-    <td WIDTH="20%"><font SIZE="2">James Francis </font></td>
-    <td WIDTH="18%"> </td>
-    <td WIDTH="17%"><font SIZE="2">1931</font></td>
-    <td WIDTH="22%"> </td>
+    <td>FOILES</td>
+    <td>James Francis</td>
+    <td></td>
+    <td>1931</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">LENTER</font></td>
-    <td WIDTH="20%"><font SIZE="2">Fred</font></td>
-    <td WIDTH="18%"><font SIZE="2">May 4, 1893</font></td>
-    <td WIDTH="17%"><font SIZE="2">Feb 2, 1971</font></td>
-    <td WIDTH="22%"> </td>
+    <td>LENTER</td>
+    <td>Fred</td>
+    <td>May 4, 1893</td>
+    <td>Feb 2, 1971</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">LOVELESS</font></td>
-    <td WIDTH="20%"><font SIZE="2">Ethel M.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1880 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1911 </font></td>
-    <td WIDTH="22%"><font SIZE="2">w/o O.D. LOVELESS</font></td>
+    <td>LOVELESS</td>
+    <td>Ethel M.</td>
+    <td>1880</td>
+    <td>1911</td>
+    <td>w/o O.D. LOVELESS</td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">LOVELESS</font></td>
-    <td WIDTH="20%"><font SIZE="2">Zay Anna</font></td>
-    <td WIDTH="18%"><font SIZE="2">(Infant)</font></td>
-    <td WIDTH="17%"> </td>
-    <td WIDTH="22%"> </td>
+    <td>LOVELESS</td>
+    <td>Zay Anna</td>
+    <td>(Infant)</td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">MARTIN</font></td>
-    <td WIDTH="20%"><font SIZE="2">Dean O. </font></td>
-    <td WIDTH="18%"><font SIZE="2">May 17, 1900 </font></td>
-    <td WIDTH="17%"><font SIZE="2">Feb 25, 1913</font></td>
-    <td WIDTH="22%"> </td>
+    <td>MARTIN</td>
+    <td>Dean O.</td>
+    <td>May 17, 1900</td>
+    <td>Feb 25, 1913</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">MC KINNEY </font></td>
-    <td WIDTH="20%"><font SIZE="2">Leland Gerald</font></td>
-    <td WIDTH="18%"> </td>
-    <td WIDTH="17%"><font SIZE="2">1933</font></td>
-    <td WIDTH="22%"> </td>
+    <td>MC KINNEY</td>
+    <td>Leland Gerald</td>
+    <td></td>
+    <td>1933</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">MUNSTERMAN</font></td>
-    <td WIDTH="20%"><font SIZE="2">Mary Lenter</font></td>
-    <td WIDTH="18%"><font SIZE="2">Oct 31, 1889</font></td>
-    <td WIDTH="17%"><font SIZE="2">Jan 19, 1982</font></td>
-    <td WIDTH="22%"> </td>
+    <td>MUNSTERMAN</td>
+    <td>Mary Lenter</td>
+    <td>Oct 31, 1889</td>
+    <td>Jan 19, 1982</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">POWELL </font></td>
-    <td WIDTH="20%"><font SIZE="2">C. O. </font></td>
-    <td WIDTH="18%"><font SIZE="2">1881</font></td>
-    <td WIDTH="17%"><font SIZE="2">1941</font></td>
-    <td WIDTH="22%"><font SIZE="2">"Father"</font></td>
+    <td>POWELL</td>
+    <td>C. O.</td>
+    <td>1881</td>
+    <td>1941</td>
+    <td>&quot;Father&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">POWELL </font></td>
-    <td WIDTH="20%"><font SIZE="2">G. M.</font></td>
-    <td WIDTH="18%"><font SIZE="2">1847 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1920 </font></td>
-    <td WIDTH="22%"><font SIZE="2">"Mother"</font></td>
+    <td>POWELL</td>
+    <td>G. M.</td>
+    <td>1847</td>
+    <td>1920</td>
+    <td>&quot;Mother&quot;</td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">POWELL </font></td>
-    <td WIDTH="20%"><font SIZE="2">Virgil</font></td>
-    <td WIDTH="18%"><font SIZE="2">1916</font></td>
-    <td WIDTH="17%"><font SIZE="2">1918</font></td>
-    <td WIDTH="22%"> </td>
+    <td>POWELL</td>
+    <td>Virgil</td>
+    <td>1916</td>
+    <td>1918</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">PUMPHREY </font></td>
-    <td WIDTH="20%"><font SIZE="2">Mary M. </font></td>
-    <td WIDTH="18%"><font SIZE="2">1874 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1943</font></td>
-    <td WIDTH="22%"> </td>
+    <td>PUMPHREY</td>
+    <td>Mary M.</td>
+    <td>1874</td>
+    <td>1943</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">PUMPHREY </font></td>
-    <td WIDTH="20%"><font SIZE="2">Zacharich B </font></td>
-    <td WIDTH="18%"><font SIZE="2">1853 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1928</font></td>
-    <td WIDTH="22%"> </td>
+    <td>PUMPHREY</td>
+    <td>Zacharich B</td>
+    <td>1853</td>
+    <td>1928</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">REED</font></td>
-    <td WIDTH="20%"><font SIZE="2">Axtel </font></td>
-    <td WIDTH="18%"><font SIZE="2">Jan 15, 1889 </font></td>
-    <td WIDTH="17%"><font SIZE="2">Jun 18, 1974</font></td>
-    <td WIDTH="22%"> </td>
+    <td>REED</td>
+    <td>Axtel</td>
+    <td>Jan 15, 1889</td>
+    <td>Jun 18, 1974</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">REED </font></td>
-    <td WIDTH="20%"><font SIZE="2">Ford C. </font></td>
-    <td WIDTH="18%"><font SIZE="2">Oct 25, 1892 </font></td>
-    <td WIDTH="17%"><font SIZE="2">Oct 9, 1921</font></td>
-    <td WIDTH="22%"> </td>
+    <td>REED</td>
+    <td>Ford C.</td>
+    <td>Oct 25, 1892</td>
+    <td>Oct 9, 1921</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">REED </font></td>
-    <td WIDTH="20%"><font SIZE="2">Lolo </font></td>
-    <td WIDTH="18%"><font SIZE="2">Aug,18, 1898 </font></td>
-    <td WIDTH="17%"> </td>
-    <td WIDTH="22%"> </td>
+    <td>REED</td>
+    <td>Lolo</td>
+    <td>Aug 18, 1898</td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">ROUSE</font></td>
-    <td WIDTH="20%"><font SIZE="2">Arthur B. </font></td>
-    <td WIDTH="18%"><font SIZE="2">1872 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1928</font></td>
-    <td WIDTH="22%"> </td>
+    <td>ROUSE</td>
+    <td>Arthur B.</td>
+    <td>1872</td>
+    <td>1928</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">SILVERS</font></td>
-    <td WIDTH="20%"><font SIZE="2">Joseph "Joe" </font></td>
-    <td WIDTH="18%"><font SIZE="2">Feb 26, 1890 </font></td>
-    <td WIDTH="17%"><font SIZE="2">May 22, 1977 </font></td>
-    <td WIDTH="22%"><font SIZE="2">Pvt. US Army WW I</font></td>
+    <td>SILVERS</td>
+    <td>Joseph &quot;Joe&quot;</td>
+    <td>Feb 26, 1890</td>
+    <td>May 22, 1977</td>
+    <td>Pvt. US Army WW I</td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">SILVERS </font></td>
-    <td WIDTH="20%"><font SIZE="2">Susie </font></td>
-    <td WIDTH="18%"><font SIZE="2">Dec 25, 1902 </font></td>
-    <td WIDTH="17%"> </td>
-    <td WIDTH="22%"> </td>
+    <td>SILVERS</td>
+    <td>Susie</td>
+    <td>Dec 25, 1902</td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">SLINKER </font></td>
-    <td WIDTH="20%"><font SIZE="2">Donald Earl </font></td>
-    <td WIDTH="18%"> </td>
-    <td WIDTH="17%"><font SIZE="2">Feb 4, 1981 </font></td>
-    <td WIDTH="22%"><font SIZE="2">son of Scott & Cynthia SLINKER</font></td>
+    <td>SLINKER</td>
+    <td>Donald Earl</td>
+    <td></td>
+    <td>Feb 4, 1981</td>
+    <td>son of Scott &amp; Cynthia SLINKER</td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">VILSMEYER </font></td>
-    <td WIDTH="20%"><font SIZE="2">(baby) </font></td>
-    <td WIDTH="18%"> </td>
-    <td WIDTH="17%"><font SIZE="2">Jul 9, 1934</font></td>
-    <td WIDTH="22%"> </td>
+    <td>VILSMEYER</td>
+    <td>(baby)</td>
+    <td></td>
+    <td>Jul 9, 1934</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">VILSMEYER </font></td>
-    <td WIDTH="20%"><font SIZE="2">Hallie Rose </font></td>
-    <td WIDTH="18%"><font SIZE="2">1904 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1971</font></td>
-    <td WIDTH="22%"> </td>
+    <td>VILSMEYER</td>
+    <td>Hallie Rose</td>
+    <td>1904</td>
+    <td>1971</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">VILSMEYER </font></td>
-    <td WIDTH="20%"><font SIZE="2">Marcus James </font></td>
-    <td WIDTH="18%"><font SIZE="2">1903 </font></td>
-    <td WIDTH="17%"><font SIZE="2">19--</font></td>
-    <td WIDTH="22%"> </td>
+    <td>VILSMEYER</td>
+    <td>Marcus James</td>
+    <td>1903</td>
+    <td>19--</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">WILKINSON </font></td>
-    <td WIDTH="20%"><font SIZE="2">Clayton O. </font></td>
-    <td WIDTH="18%"><font SIZE="2">1915 </font></td>
-    <td WIDTH="17%"><font SIZE="2">1915</font></td>
-    <td WIDTH="22%"> </td>
+    <td>WILKINSON</td>
+    <td>Clayton O.</td>
+    <td>1915</td>
+    <td>1915</td>
+    <td></td>
   </tr>
   <tr>
-    <td WIDTH="23%"><font SIZE="2">WOODWARD </font></td>
-    <td WIDTH="20%"><font SIZE="2">Dale V. </font></td>
-    <td WIDTH="18%"> </td>
-    <td WIDTH="17%"><font SIZE="2">Jul 1916</font></td>
-    <td WIDTH="22%"> </td>
+    <td>WOODWARD</td>
+    <td>Dale V.</td>
+    <td></td>
+    <td>Jul 1916</td>
+    <td></td>
   </tr>
 </table>
-</body>
-</html>
