--- a/mcr/littlefieldc.html
+++ b/mcr/littlefieldc.html
@@ -1,66 +1,54 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Littlefield Cemetery</title>
-</head>
+<div class="mcr-title">Littlefield Cemetery</div>
 
-<body>
-<font SIZE="2">
+<p>Skull Springs, Malheur County, Oregon</p>
 
-<p ALIGN="CENTER">LITTLEFIELD CEMETERY</p>
+<p>At Skull Springs west of Owyhee Reservoir on old Littlefield Home Ranch. T 24 S, R 40 E, S 35. Records compiled by Grant and Sybil Higley.</p>
 
-<p ALIGN="CENTER">Skull Springs, Malheur County, Oregon</p>
-
-<p ALIGN="CENTER"> </p>
-
-<p>At Skull Springs west of Owyhee Reservoir on old Littlefield Home Ranch. T 24 S, R 40 E, S 35. Records compiled by Grant and Sybil Higley.</font></p>
-
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="595">
-  <tr>
-    <td WIDTH="17%"><font SIZE="2"><b>Last Name</b></font></td>
-    <td WIDTH="18%"><font SIZE="2"><b>First Name</b></font></td>
-    <td WIDTH="17%"><font SIZE="2"><b>Birth Date</b></font></td>
-    <td WIDTH="19%"><font SIZE="2"><b>Death Date</b></font></td>
-    <td WIDTH="29%"><font SIZE="2"><b>Other Information</b></font></td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">Elliot</font></td>
-    <td WIDTH="18%"><font SIZE="2">Esther Littlefield</font></td>
-    <td WIDTH="17%"><font SIZE="2">4 May 1856</font></td>
-    <td WIDTH="19%"><font SIZE="2">24 Oct 1945</font></td>
-    <td WIDTH="29%"><font SIZE="2">age 89y 5m 20d</font></td>
+    <td>Elliot</td>
+    <td>Esther Littlefield</td>
+    <td>4 May 1856</td>
+    <td>24 Oct 1945</td>
+    <td>age 89y 5m 20d</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">Elliott</font></td>
-    <td WIDTH="18%"><font SIZE="2">Robert</font></td>
-    <td WIDTH="17%"> </td>
-    <td WIDTH="19%"><font SIZE="2">1925</font></td>
-    <td WIDTH="29%"><font SIZE="2">age unknown, h/o Esther</font></td>
+    <td>Elliott</td>
+    <td>Robert</td>
+    <td></td>
+    <td>1925</td>
+    <td>age unknown, h/o Esther</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">Littlefield</font></td>
-    <td WIDTH="18%"><font SIZE="2">Arthur</font></td>
-    <td WIDTH="17%"><font SIZE="2">15 Jul 1847</font></td>
-    <td WIDTH="19%"><font SIZE="2">31 Jan 1900</font></td>
-    <td WIDTH="29%"><font SIZE="2">age 52y 6m 16d</font></td>
+    <td>Littlefield</td>
+    <td>Arthur</td>
+    <td>15 Jul 1847</td>
+    <td>31 Jan 1900</td>
+    <td>age 52y 6m 16d</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">Littlefield</font></td>
-    <td WIDTH="18%"><font SIZE="2">Dean</font></td>
-    <td WIDTH="17%"> </td>
-    <td WIDTH="19%"><font SIZE="2">1910</font></td>
-    <td WIDTH="29%"><font SIZE="2">age 30y 8m 28d</font></td>
+    <td>Littlefield</td>
+    <td>Dean</td>
+    <td></td>
+    <td>1910</td>
+    <td>age 30y 8m 28d</td>
   </tr>
   <tr>
-    <td WIDTH="17%"><font SIZE="2">Littlefield</font></td>
-    <td WIDTH="18%"><font SIZE="2">Xeno E.</font></td>
-    <td WIDTH="17%"><font SIZE="2">22 Mar 1875</font></td>
-    <td WIDTH="19%"><font SIZE="2">25 Nov 194-</font></td>
-    <td WIDTH="29%"><font SIZE="2">age 66y 8m 7d</font></td>
+    <td>Littlefield</td>
+    <td>Xeno E.</td>
+    <td>22 Mar 1875</td>
+    <td>25 Nov 194-</td>
+    <td>age 66y 8m 7d</td>
   </tr>
 </table>
-
-<p> </p>
-</body>
-</html>
