--- a/mcr/succorcreekc.html
+++ b/mcr/succorcreekc.html
@@ -6,108 +6,108 @@
 </head>
 
 <body>
-<font SIZE="2">
 
-<p ALIGN="CENTER">SUCCOR CREEK</p>
 
-<p ALIGN="CENTER">MC BRIDE CREEK ROAD CEMETERY</p>
+SUCCOR CREEK
 
-<p ALIGN="CENTER">1983</p>
+MC BRIDE CREEK ROAD CEMETERY
 
-<p ALIGN="CENTER">T 25 S R 46E</p>
+1983
 
-<p ALIGN="CENTER">&nbsp;</p>
+T 25 S R 46E
 
-<p>This cemetery is located off Highway 95, 1.9 miles west of the Idaho Oregon boarder. It
+&nbsp;
+
+This cemetery is located off Highway 95, 1.9 miles west of the Idaho Oregon boarder. It
 is located in a fenced pasture of about 2 acres with only one stone remaining upright, the
 animals have knocked over all the rest. There were a total five stones with ten
 inscriptions. We were able to stand the ROSE family stone in an upright position. Records
-compiled by Grant and Sybil Higley.</font></p>
+compiled by Grant and Sybil Higley.
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="637">
+<table BORDER="1" CELLSPACING="1" CELLPADDING="7">
   <tr>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">LAST NAME</b></font></td>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">FIRST NAME</b></font></td>
-    <td WIDTH="19%"><font SIZE="2"><b><p ALIGN="CENTER">BIRTH DATE</b></font></td>
-    <td WIDTH="17%"><font SIZE="2"><b><p ALIGN="CENTER">DEATH DATE</b></font></td>
-    <td WIDTH="27%"><font SIZE="2"><b><p ALIGN="CENTER">OTHER INFORMATION</b></font></td>
+    <td>LAST NAME</td>
+    <td>FIRST NAME</td>
+    <td>BIRTH DATE</td>
+    <td>DEATH DATE</td>
+    <td>OTHER INFORMATION</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">ROSE</font></td>
-    <td WIDTH="19%"><font SIZE="2">Sarah W.</font></td>
-    <td WIDTH="19%"><font SIZE="2">1804</font></td>
-    <td WIDTH="17%"><font SIZE="2">1886</font></td>
-    <td WIDTH="27%"><font SIZE="2">(quad stone) stone shared with Rosetta, Emma A., &amp; Wm.
-    Albert</font></td>
+    <td>ROSE</td>
+    <td>Sarah W.</td>
+    <td>1804</td>
+    <td>1886</td>
+    <td>(quad stone) stone shared with Rosetta, Emma A., &amp; Wm.
+    Albert</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">ROSE</font></td>
-    <td WIDTH="19%"><font SIZE="2">Rosetta</font></td>
-    <td WIDTH="19%"><font SIZE="2">1890</font></td>
-    <td WIDTH="17%"><font SIZE="2">1819</font></td>
-    <td WIDTH="27%"><font SIZE="2">(quad stone) stone shared with Sarah W., Emma A., &amp; Wm.
-    Albert</font></td>
+    <td>ROSE</td>
+    <td>Rosetta</td>
+    <td>1890</td>
+    <td>1819</td>
+    <td>(quad stone) stone shared with Sarah W., Emma A., &amp; Wm.
+    Albert</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">ROSE</font></td>
-    <td WIDTH="19%"><font SIZE="2">Emma A</font></td>
-    <td WIDTH="19%"><font SIZE="2">1846</font></td>
-    <td WIDTH="17%"><font SIZE="2">1918</font></td>
-    <td WIDTH="27%"><font SIZE="2">(quad stone) stone shared with Sarah W., Rosetta, &amp; Wm.
-    Albert</font></td>
+    <td>ROSE</td>
+    <td>Emma A</td>
+    <td>1846</td>
+    <td>1918</td>
+    <td>(quad stone) stone shared with Sarah W., Rosetta, &amp; Wm.
+    Albert</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">ROSE</font></td>
-    <td WIDTH="19%"><font SIZE="2">Wm. Albert</font></td>
-    <td WIDTH="19%"><font SIZE="2">1844</font></td>
-    <td WIDTH="17%"><font SIZE="2">1908</font></td>
-    <td WIDTH="27%"><font SIZE="2">(quad stone) stone shared with Sarah W., Rosetta, &amp;
-    Emma A.</font></td>
+    <td>ROSE</td>
+    <td>Wm. Albert</td>
+    <td>1844</td>
+    <td>1908</td>
+    <td>(quad stone) stone shared with Sarah W., Rosetta, &amp;
+    Emma A.</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">SHAVER</font></td>
-    <td WIDTH="19%"><font SIZE="2">Marrian</font></td>
-    <td WIDTH="19%"><font SIZE="2">--</font></td>
-    <td WIDTH="17%"><font SIZE="2">1911</font></td>
-    <td WIDTH="27%"><font SIZE="2">(double stone) stone shared with Sylvia</font></td>
+    <td>SHAVER</td>
+    <td>Marrian</td>
+    <td>--</td>
+    <td>1911</td>
+    <td>(double stone) stone shared with Sylvia</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">SHAVER</font></td>
-    <td WIDTH="19%"><font SIZE="2">Sylvia</font></td>
-    <td WIDTH="19%"><font SIZE="2">--</font></td>
-    <td WIDTH="17%"><font SIZE="2">1912</font></td>
-    <td WIDTH="27%"><font SIZE="2">(double stone) stone shared with Marrian</font></td>
+    <td>SHAVER</td>
+    <td>Sylvia</td>
+    <td>--</td>
+    <td>1912</td>
+    <td>(double stone) stone shared with Marrian</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">graham</font></td>
-    <td WIDTH="19%"><font SIZE="2">Mrs. Allen A.</font></td>
-    <td WIDTH="19%"><font SIZE="2">--</font></td>
-    <td WIDTH="17%"><font SIZE="2">1 Jan 1885</font></td>
-    <td WIDTH="27%">&nbsp;</td>
+    <td>graham</td>
+    <td>Mrs. Allen A.</td>
+    <td>--</td>
+    <td>1 Jan 1885</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">Ramsey</font></td>
-    <td WIDTH="19%"><font SIZE="2">Francis E.</font></td>
-    <td WIDTH="19%"><font SIZE="2">29 Mar 1831</font></td>
-    <td WIDTH="17%"><font SIZE="2">5 Dec 1904</font></td>
-    <td WIDTH="27%"><font SIZE="2">(double stone) stone shared with Clarence</font></td>
+    <td>Ramsey</td>
+    <td>Francis E.</td>
+    <td>29 Mar 1831</td>
+    <td>5 Dec 1904</td>
+    <td>(double stone) stone shared with Clarence</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">Ramsey</font></td>
-    <td WIDTH="19%"><font SIZE="2">Clarence</font></td>
-    <td WIDTH="19%"><font SIZE="2">4 Jan 1868</font></td>
-    <td WIDTH="17%"><font SIZE="2">10 Sep 1888</font></td>
-    <td WIDTH="27%"><font SIZE="2">(double stone) stone shared with Francis E.</font></td>
+    <td>Ramsey</td>
+    <td>Clarence</td>
+    <td>4 Jan 1868</td>
+    <td>10 Sep 1888</td>
+    <td>(double stone) stone shared with Francis E.</td>
   </tr>
   <tr>
-    <td WIDTH="19%"><font SIZE="2">gATES</font></td>
-    <td WIDTH="19%"><font SIZE="2">Katie A.</font></td>
-    <td WIDTH="19%"><font SIZE="2">--</font></td>
-    <td WIDTH="17%"><font SIZE="2">27 Sep 1895</font></td>
-    <td WIDTH="27%"><font SIZE="2">Age 65 years</font></td>
+    <td>gATES</td>
+    <td>Katie A.</td>
+    <td>--</td>
+    <td>27 Sep 1895</td>
+    <td>Age 65 years</td>
   </tr>
 </table>
 
-<p>&nbsp;</p>
+&nbsp;
 </body>
 </html>
